# rust_euler

./: Cargo.toml
src/: problem1.rs  problem2.rs  problem22.rs  problem3.rs  problem5.rs  problem6.rs
